...
//  Created by Oleksiy on 27.04.2021.
//

import UIKit

class LoginView: UIView, AuthView {
    let emailTextField = AuthTextFieldView(image: UIImage(systemName: "envelope") ?? UIImage(), placeHolder: "Email")
    let passwordTextField = AuthTextFieldView(image: UIImage(systemName: "lock") ?? UIImage(), placeHolder: "Password")
    let loginButton = AuthButton(type: .login)
    let signupButton = AuthButton(type: .signup)

    init() {
        super.init(frame: .zero)
        
...
