...
            return nil
        }
        return string
    }
    
    func showErrorAlert(errorMessage: String) {
        let alertViewController = UIAlertController(title: "Error", message: errorMessage, preferredStyle: .alert)
        alertViewController.addAction(UIAlertAction(title: "OK", style: .destructive, handler: nil))
        present(alertViewController, animated: true, completion: nil)
    }
    
    @objc private func dismissKeyboard() {
        view.endEditing(true)
...
